--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <!-- Veri Kaynağı (1/3) -->
                 <div class="md:w-1/3 border-t md:border-t-0 md:border-l border-white/10 pt-4 md:pt-0 md:pl-6">
                     <div class="flex items-center gap-2 mb-2 text-pink-400 font-bold text-xs uppercase tracking-wider">
-                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"></path></svg>
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"></path></svg>
                         Veri Kaynağı
                     </div>
                     <ul id="sources-list" class="text-xs text-slate-400 space-y-1">
@@ -301,9 +301,18 @@
         import { GLTFExporter } from 'three/addons/exporters/GLTFExporter.js'; 
 
         // --- YAPILANDIRMA ---
+        
+        // GÜVENLİK NOTU: API anahtarı parçalara ayrılmıştır (Obfuscation). 
+        // Bu, sadece tarayıcıda hemen okunamamasını sağlar, gerçek güvenlik sunmaz.
+        const KEY_PARTS = [
+            'AIzaSyBWudtE', 
+            'XXHsA0T00hyN', 
+            'JuOq5CRRqfAk', 
+            'Vh0'
+        ];
+        
         const CONFIG = {
-            // Lütfen geçerli bir API Anahtarı ile değiştirin
-            apiKey: "AIzaSyDkhjS1pFI5_WRChhvo8tVo5is7HoSwN9g", 
+            apiKey: KEY_PARTS.join(''), 
             model: "" 
         };
 
@@ -565,7 +574,7 @@
             ui.btnDownload.disabled = true;
         }
 
-        // YAPAY ZEKA API İŞLEMLERİ
+        // YAPAY ZEKAA API İŞLEMLERİ
         async function generateModel() {
             const prompt = ui.input.value.trim();
             if(!prompt || !CONFIG.model) return;
